--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,13 @@
 
 <body>
     <p>Welcome to chat app</p>
+    <ol id="messages"></ol>
+    <form id="message-form">
+        <input name="message" placeholder="Message" type="text"/>
+        <button>Send</button>
+    </form>
     <script src="/socket.io/socket.io.js"></script>
+    <script src="/js/libs/jquery-3.3.1.min.js"></script>
     <script src="/js/index.js"></script>
 </body>
 
