--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,25 @@
     <meta charset="utf-8" />
 </head>
 
-<body>
-    <p>Welcome to chat app</p>
-    <ol id="messages"></ol>
-    <form id="message-form">
-        <input name="message" placeholder="Message" type="text"/>
-        <button>Send</button>
-    </form>
-    <button id="send-location">Send Location</button>
+<body class="chat">
+    <div class="chat__sidebar">
+        <h3>people</h3>
+        <div id="users"></div>
+    </div>
+    <div class="chat__main">
+            <p>Welcome to chat app</p>
+            <ol id="messages" class="chat__messages"></ol>
+            <div class="chat__footer">
+                    <form id="message-form">
+                            <input name="message" placeholder="Message" type="text" autofocus autocomplete="off"/>
+                            <button>Send</button>
+                        </form>
+            </div>
+            
+            <button id="send-location">Send Location</button>
+    </div>
+    
+    <link rel="stylesheet" href="/css/styles.css">
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/libs/jquery-3.3.1.min.js"></script>
     <script src="/js/index.js"></script>
